k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: schemalabs-ingress
  namespace: schemalabs
  annotations:
    kubernetes.io/ingress.global-static-ip-name: schemalabs-k8s-ip
spec:
  rules:
  - host: console.schemalabs.ai
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: go
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
